plugins {
    id 'java'
    id 'eclipse'
    id "org.jetbrains.gradle.plugin.idea-ext" version "1.0.1"
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    //maven publish
    id 'maven-publish'
}

group = 'lisek-world-reborn'
version = '1.0-snapshot'

repositories {
    maven {
        name = 'papermc-repo'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
      mavenCentral()

    maven {
        url = 'https://raw.github.com/mercadolibre/java-restclient/mvn-repo/'
    }
    
}

dependencies {
    compileOnly 'com.velocitypowered:velocity-api:3.1.1'
    implementation 'redis.clients:jedis:4.2.3'
    implementation 'com.sendgrid:java-http-client:4.5.0'
    implementation 'org.reflections:reflections:0.10.2'

    annotationProcessor 'com.velocitypowered:velocity-api:3.1.1'
}

def targetJavaVersion = 11


java {
//    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
//    if (JavaVersion.current() < javaVersion) {
//        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
//    }
}

tasks.withType(JavaCompile).configureEach {
    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
        options.release = targetJavaVersion
    }
}


def templateSource = file('src/main/templates')
def templateDest = layout.buildDirectory.dir('generated/sources/templates')
def generateTemplates = tasks.register('generateTemplates', Copy) { task ->
    def props = [
            'version': project.version + "-" + getDate()
    ]
    task.inputs.properties props

    task.from templateSource
    task.into templateDest
    task.expand props
}

sourceSets.main.java.srcDir(generateTemplates.map { it.outputs })

rootProject.idea.project.settings.taskTriggers.afterSync generateTemplates
project.eclipse.synchronizationTasks(generateTemplates)

def getDate() {
    def date = new Date()
    def formattedDate = date.format('yyyyMMddHHmmss')
    return formattedDate
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com")
            credentials {
                username = System.getenv("USERNAME") ? System.getenv("GITHUB_USER") : "NO USER"
                password = System.getenv("TOKEN") ? System.getenv("GITHUB_TOKEN") : "NO PASS"
            }
        }
    }
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}
